--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,10 @@ Depends:
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-LinkingTo: Rcpp
+LinkingTo: Rcpp, RcppArmadillo
 Imports:
-    Rcpp
+    Rcpp,
+    RcppArmadillo
 Suggests:
     testthat
 RoxygenNote: 5.0.1
