Clean up and some documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,13 @@ export(cosMeasure)
 export(count)
 export(createProbMatX)
 export(distribution)
+export(forward)
+export(runKLDMtx)
+export(runKLDVec)
 export(simulateHid)
+export(train)
 export(updateProbMatX)
+export(viterbi)
+export(viterbiProbVal)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rspatiotemp)
