Stationary Window, Signal Decomposition

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,17 @@ export(convert)
 export(cosMeasure)
 export(count)
 export(createProbMatX)
+export(decomp)
+export(detectOutliersFft)
 export(distribution)
 export(forward)
+export(ndiffsWindow)
 export(runKLDMtx)
 export(runKLDVec)
+export(runKLDVecRand)
+export(runKLDVecSim)
+export(runKLDVecVec)
+export(runSAX)
 export(simulateHid)
 export(train)
 export(updateProbMatX)
