--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,23 +2,31 @@
 
 export(E)
 export(F)
+export(accDegrad)
+export(adf.testWindow)
+export(computeRUL)
 export(convert)
 export(cosMeasure)
 export(count)
+export(createLifeTab)
 export(createProbMatX)
 export(decomp)
 export(detectOutliersFft)
 export(distribution)
 export(forward)
 export(ndiffsWindow)
+export(plotFFT)
 export(runKLDMtx)
 export(runKLDVec)
 export(runKLDVecRand)
 export(runKLDVecSim)
 export(runKLDVecVec)
 export(runSAX)
+export(sdAllFiles.mat)
+export(sdAllFiles.vec)
 export(simulateHid)
 export(train)
+export(updateLifeTab)
 export(updateProbMatX)
 export(viterbi)
 export(viterbiProbVal)
