RUL using HMM and depmixS4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,38 @@
 
 export(E)
 export(F)
+export(RUL.HMM)
+export(RUL.mat)
+export(RUL.vec)
 export(accDegrad)
 export(adf.testWindow)
+export(alldata)
 export(computeRUL)
+export(computeRULBounds)
 export(convert)
 export(cosMeasure)
 export(count)
 export(createLifeTab)
+export(createModel)
+export(createModel.path)
+export(createModels.path)
 export(createProbMatX)
+export(criticalPath)
 export(decomp)
 export(detectOutliersFft)
 export(distribution)
+export(formatRULHMM)
 export(forward)
+export(getEnergy)
+export(graphRUL)
+export(lifeTab)
+export(lifeTab.allFile.vec)
+export(meanAndStd)
+export(meanStdDev)
+export(meanStdDevR)
 export(ndiffsWindow)
 export(plotFFT)
+export(readToVec)
 export(runKLDMtx)
 export(runKLDVec)
 export(runKLDVecRand)
@@ -25,10 +43,13 @@ export(runSAX)
 export(sdAllFiles.mat)
 export(sdAllFiles.vec)
 export(simulateHid)
+export(toWPDSAX)
 export(train)
+export(trainHMM)
 export(updateLifeTab)
 export(updateProbMatX)
 export(viterbi)
 export(viterbiProbVal)
+export(viterbiR)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rspatiotemp)
