RUL HMM test cases and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,11 @@
 export(E)
 export(F)
 export(RUL.HMM)
+export(RUL.HMM.dm)
+export(RUL.dm.tab)
 export(RUL.mat)
 export(RUL.vec)
+export(RULpartial.dm.tab)
 export(accDegrad)
 export(adf.testWindow)
 export(alldata)
@@ -15,8 +18,16 @@ export(cosMeasure)
 export(count)
 export(createLifeTab)
 export(createModel)
+export(createModel.dm)
+export(createModel.dm.tab)
 export(createModel.path)
+export(createModel.path.dm)
+export(createModel.path.dm.tab)
 export(createModels.path)
+export(createModels.path.dm)
+export(createModels.path.dm.tab)
+export(createPartModel.path.dm.tab)
+export(createPartModels.path.dm.tab)
 export(createProbMatX)
 export(criticalPath)
 export(decomp)
@@ -32,8 +43,11 @@ export(meanAndStd)
 export(meanStdDev)
 export(meanStdDevR)
 export(ndiffsWindow)
+export(pickPartModel.dm.tab)
 export(plotFFT)
+export(probObsLog)
 export(readToVec)
+export(readToVecPart)
 export(runKLDMtx)
 export(runKLDVec)
 export(runKLDVecRand)
@@ -46,10 +60,15 @@ export(simulateHid)
 export(toWPDSAX)
 export(train)
 export(trainHMM)
+export(trainHMM.dm)
 export(updateLifeTab)
 export(updateProbMatX)
 export(viterbi)
+export(viterbiCont)
+export(viterbiProbDepmix)
 export(viterbiProbVal)
 export(viterbiR)
+export(wpdEnergy)
+import(parallel)
 importFrom(Rcpp,sourceCpp)
 useDynLib(rspatiotemp)
