--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,20 @@
 
 export(E)
 export(F)
+export(RMSE)
 export(RUL.HMM)
 export(RUL.HMM.dm)
 export(RUL.dm.tab)
 export(RUL.mat)
 export(RUL.vec)
 export(RULpartial.dm.tab)
+export(SU)
 export(accDegrad)
 export(adf.testWindow)
+export(allFeatures)
 export(alldata)
+export(arModel)
+export(chooseCluster)
 export(computeRUL)
 export(computeRULBounds)
 export(convert)
@@ -33,21 +38,34 @@ export(criticalPath)
 export(decomp)
 export(detectOutliersFft)
 export(distribution)
+export(emdR)
+export(energy)
+export(entropyR)
+export(featureEx)
 export(formatRULHMM)
 export(forward)
 export(getEnergy)
 export(graphRUL)
+export(knee)
+export(kurtosis)
 export(lifeTab)
 export(lifeTab.allFile.vec)
+export(lineIntegral)
+export(mean)
 export(meanAndStd)
+export(meanPSD)
 export(meanStdDev)
 export(meanStdDevR)
+export(mutInfo)
 export(ndiffsWindow)
+export(pca)
 export(pickPartModel.dm.tab)
+export(pk2pk)
 export(plotFFT)
 export(probObsLog)
 export(readToVec)
 export(readToVecPart)
+export(rms)
 export(runKLDMtx)
 export(runKLDVec)
 export(runKLDVecRand)
@@ -57,6 +75,8 @@ export(runSAX)
 export(sdAllFiles.mat)
 export(sdAllFiles.vec)
 export(simulateHid)
+export(skewness)
+export(stdDev)
 export(toWPDSAX)
 export(train)
 export(trainHMM)
